--- a/css/styles.css
+++ b/css/styles.css
@@ -11,7 +11,7 @@ h1 {
   font-size: 30px;
   border-bottom: #CC66FF dashed 3px;
 
-  background-image: url("/nkgw-marronnier.ico");
+  background-image: url("/ComputerGraphicsCIT/nkgw-marronnier.ico");
   background-size: 55px 55px;
   background-repeat: no-repeat;
   padding: 0px 0px 0px 65px;
