--- a/css/styles.css
+++ b/css/styles.css
@@ -19,11 +19,11 @@ h1 {
 
 h1:first-letter {
   font-size: 50px;
-  color: #325A8C;
+  color: #008000;
 }
 
 h2 {
-  border-bottom: solid 3px skyblue;
+  border-bottom: solid 3px #00ff7f;
   position: relative;
 }
 
@@ -31,16 +31,16 @@ h2:after {
   position: absolute;
   content: " ";
   display: block;
-  border-bottom: solid 3px #ffc778;
+  border-bottom: solid 3px #00bfff;
   bottom: -3px;
   width: 10%;
 }
 
 h3 {
   position: relative;
-  background: #f1f8ff;
+  background: #7fffd4;
   padding: 0.25em 0.5em;
-  border-left: solid 2em #5c9ee7;
+  border-left: solid 2em #7fff00;
 }
 
 h3:before {
@@ -163,8 +163,8 @@ a:active {
 footer,
 .push {
   width: 100%;
-  background-color: #89c7de;
-  color: #fff;
+  background-color: #7cfc00;
+  color: #fafafa;
   text-align: center;
   padding: 0px 10px;
   ;
