--- a/css/styles.css
+++ b/css/styles.css
@@ -23,7 +23,7 @@ h1:first-letter {
 }
 
 h2 {
-  border-bottom: solid 3px #00ff7f;
+  border-bottom: solid 3px #ee82ee;
   position: relative;
 }
 
@@ -31,16 +31,16 @@ h2:after {
   position: absolute;
   content: " ";
   display: block;
-  border-bottom: solid 3px #00bfff;
+  border-bottom: solid 3px #0000cd;
   bottom: -3px;
   width: 10%;
 }
 
 h3 {
   position: relative;
-  background: #7fffd4;
+  background: #fffacd;
   padding: 0.25em 0.5em;
-  border-left: solid 2em #7fff00;
+  border-left: solid 2em #ffa500;
 }
 
 h3:before {
@@ -163,7 +163,7 @@ a:active {
 footer,
 .push {
   width: 100%;
-  background-color: #7cfc00;
+  background-color: #32cd32;
   color: #fafafa;
   text-align: center;
   padding: 0px 10px;
